All Common Wrok, Login Captcha, Validation Message Height Fix Completed

--- a/src/ui/internal-audit/src/app/views/private/security/change-password/change-password.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/change-password/change-password.component.html
@@ -53,9 +53,10 @@
                         *ngIf="changePasswordForm.get('confirmPassword').hasError('minlength')">
                         The minimum length for this field is {{changePasswordForm.get('confirmPassword').errors.minlength.requiredLength}} characters.
                     </small>
-                    <small class="text-danger" *ngIf="(changePasswordForm.get('confirmPassword')?.dirty || changePasswordForm.get('confirmPassword')?.touched) && changePasswordForm.get('confirmPassword')?.value != changePasswordForm.get('newPassword')?.value">
-                      New Password and Confirm Password not matched
-                    </small>
+            <small class="text-danger"
+                   *ngIf="changePasswordForm.get('newPassword').touched && changePasswordForm.get('confirmPassword').errors?.passwordMismatch">
+              Passwords does not match
+            </small>
                 </div>
           </div>
         </form>
