--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment/risk-assessment.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment/risk-assessment.component.html
@@ -7,27 +7,23 @@
           </div>
           <div class="card-body">
            
-            <div class="row">
-              <div class="col-sm-8 mb-2">
-                  <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
-                    <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
-                  </button> 
-  
+            <div class="row" style="margin: 0 auto;">
+              <div class="col-md-6 mb-2">
+                <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
+                  <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
+                </button> 
               </div>
-              <div class="col-sm-4 mb-2">
-                <div class="row">
-                  <div class="form-floating col-md-10" style="padding-right:50px ;">
-                      <input type="text" class="form-control searchInput"  placeholder="Search by Name"/>
-                      <label class="searchLevel" for="floatingInput">Name</label>
-                  </div>
-                  <div class="col-md-2">                    
-                    <button type="button" class="btn btn-secondary mr-1 btn-block searchBtn" data-toggle="modal" >
-                      Search
-                    </button>
-                  </div>                 
-                </div>
+              <div class="col-md-5 mb-2 form-floating">
+                <input type="text" class="form-control searchInput"  placeholder="Search by Name or Code"/>
+                <label class="searchLevel" for="floatingInput">Country Name / Country Code</label>
+              </div>
+              <div class="col-md-1 mb-2">
+                <button type="button" class="btn btn-secondary mr-1 btn-block searchBtn" data-toggle="modal" >
+                  Search
+                </button>
               </div>
             </div>
+            
             <div class="row overflow-auto">
                 <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border datatableStyle hover" >
                   <thead>
