--- a/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/country/country.component.html
@@ -7,32 +7,24 @@
           <i class="fa fa-align-justify" ></i> Country List
         </div>
         <div class="card-body">
-          <div class="row">
-            <div class="col-sm-7 mb-2">
-                <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
-                  <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg>  
-                  Create
-                </button>
-
+         
+          <div class="row" style="margin: 0 auto;">
+            <div class="col-md-6 mb-2">
+              <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
+                <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
+              </button> 
             </div>
-            <div class="col-sm-5 mb-2">
-              <div class="row">
-                <div class="col-8">
-                  <!-- <input type="text" [(ngModel)]="searchText" class="form-control pull-right" placeholder="Search by Code"/> -->
-                  <input type="text" class="form-control pull-right" placeholder="Search by Name"/>
-                </div>
-                <div class="col-4">
-                  <!-- <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" (click)="search()" >
-                      <i class="fa fa-search" aria-hidden="true"></i>
-                  </button> -->
-                  <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" >
-                    Search
-                </button>
-                </div>
-                
-              </div>
+            <div class="col-md-5 mb-2 form-floating">
+              <input type="text" class="form-control searchInput"  placeholder="Search by Name or Code"/>
+              <label class="searchLevel" for="floatingInput">Country Name / Country Code</label>
+            </div>
+            <div class="col-md-1 mb-2">
+              <button type="button" class="btn btn-secondary mr-1 btn-block searchBtn" data-toggle="modal" >
+                Search
+              </button>
             </div>
           </div>
+          
           <div class="row overflow-auto">
               <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover datatableStyle" >
                 <thead>
