--- a/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
@@ -10,50 +10,35 @@
             <div class="row">
               <div class="col-lg-12">
                 <form [formGroup]="userListForm">
-                  <div class="row pull-left">
-                    <div class="col-sm-8">
+                  <div class="row">
+                    <div class="col-sm-8 mb-2">
+                      
                       <div class="row">
-                        <!-- <div class="col-4">
-                          <input type="text" formControlName="userName" id="userName" class="form-control pull-right" placeholder="User Name"/>
-                        </div> -->
-                        <div class="col-4">
-                          <div class="form-floating" >
-                            <input type="text" formControlName="userName" id="userName" class="form-control pull-right" placeholder="User Name"/>
-                            <label for="userName">User Name</label>
-                          </div>
+                        <div class="form-floating col-md-4" >
+                          <input type="text" formControlName="userName" class="form-control searchInput"  placeholder="User Name"/>
+                          <label class="searchLevel" for="floatingInput">User Name</label>
                         </div>
-                        <div class="col-4">
-                          <div class="form-floating">
-                            <input type="text" formControlName="employeeName" id="employeeName" class="form-control pull-right" placeholder="Employee Name"/>
-                            <label for="employeeName">Employee Name</label> 
-                          </div>                                                  
+
+                        <div class="form-floating col-md-4" >
+                          <input type="text" formControlName="employeeName" class="form-control searchInput"  placeholder="Employee Name"/>
+                          <label class="searchLevel" for="floatingInput">Employee Name</label>
                         </div>
-                        <div class="col-4" >
-                          <div class="form-floating">
-                            <select aria-label="Floating label select example" cSelect id="userRole"
-                            formControlName="userRole" name="userRole">
+
+                        <div class="form-floating col-md-4">
+                          <select aria-label="Floating label select example" class="searchInput" cSelect id="userRole" formControlName="userRole" name="userRole">
                             <option value="">Select Role</option>
                             <option *ngFor="let role of roles" [value]="role.name"> {{role.name}}</option>
-                            </select>
-                            <label for="userRole">Role</label> 
-                          </div>
-                          
+                          </select>
+                          <label class="searchLevel" for="floatingInput">Role</label> 
                         </div>
                       </div>
+                        
+                      
                     </div>   
-                    <div class="col-sm-4">
-                      <div class="row">
-                        <div class="col-3">
-                          <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" style="height: 55px;" (click)="search()" >
-                            Search
-                        </button>
-                        </div>
-                        <!-- <div class="col-3">
-                          <button type="button" class="btn btn-secondary mr-1 pull-right btn-block"  (click)="clearSearch()" >
-                            Reset
-                        </button>
-                        </div> -->
-                      </div>
+                    <div class="col-sm-4 mb-2">
+                      <button type="button" class="btn btn-secondary mr-1 pull-right btn-block searchBtn" (click)="search()" >
+                        Search
+                    </button>
                     </div>
 
 
