--- a/src/ui/internal-audit/src/app/views/private/configuration/emailConfig/emailConfig.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/emailConfig/emailConfig.component.html
@@ -10,23 +10,20 @@
           <form [formGroup]="emailConfigSearchForm">
           <div class="row">
 
-            <div class="col-sm-8 mb-2">
-              <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
-                <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
-              </button> 
-             </div>
-          
-             <div class="col-sm-4 mb-2">
-              <div class="row">
-                <div class="form-floating col-md-10" style="padding-right:50px ;">
-                    <input type="text" formControlName="searchText" class="form-control searchInput"  placeholder="Search by Country"/>
-                    <label class="searchLevel" for="floatingInput">Search by Country</label>
-                </div>
-                <div class="col-md-2">                    
-                  <button type="button" class="btn btn-secondary mr-1 btn-block searchBtn" data-toggle="modal" (click)="search()">
-                    Search
-                  </button>
-                </div>                 
+            <div class="row" style="margin: 0 auto;">
+              <div class="col-md-6 mb-2">
+                <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
+                  <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
+                </button> 
+              </div>
+              <div class="col-md-5 mb-2 form-floating">
+                <input type="text" formControlName="searchText" class="form-control searchInput"  placeholder="Search by Country"/>
+                <label class="searchLevel" for="floatingInput">Search by Country</label>
+              </div>
+              <div class="col-md-1 mb-2">
+                <button type="button" class="btn btn-secondary mr-1 btn-block searchBtn" data-toggle="modal" (click)="search()">
+                  Search
+                </button>
               </div>
             </div>
             
