--- a/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
@@ -10,38 +10,28 @@
             <div class="row">
               <div class="col-lg-12">
                 <form [formGroup]="userListForm">
-                  <div class="row">
-                    <div class="col-sm-8 mb-2">
-                      
-                      <div class="row">
-                        <div class="form-floating col-md-4" >
-                          <input type="text" formControlName="userName" class="form-control searchInput"  placeholder="User Name"/>
-                          <label class="searchLevel" for="floatingInput">User Name</label>
-                        </div>
-
-                        <div class="form-floating col-md-4" >
-                          <input type="text" formControlName="employeeName" class="form-control searchInput"  placeholder="Employee Name"/>
-                          <label class="searchLevel" for="floatingInput">Employee Name</label>
-                        </div>
-
-                        <div class="form-floating col-md-4">
-                          <select aria-label="Floating label select example" class="searchInput" cSelect id="userRole" formControlName="userRole" name="userRole">
-                            <option value="">Select Role</option>
-                            <option *ngFor="let role of roles" [value]="role.name"> {{role.name}}</option>
-                          </select>
-                          <label class="searchLevel" for="floatingInput">Role</label> 
-                        </div>
-                      </div>
-                        
-                      
-                    </div>   
-                    <div class="col-sm-4 mb-2">
-                      <button type="button" class="btn btn-secondary mr-1 pull-right btn-block searchBtn" (click)="search()" >
-                        Search
-                    </button>
+                  <div class="row" style="margin: 0 auto;">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-3 mb-2 form-floating">
+                      <input type="text" formControlName="userName" class="form-control searchInput"  placeholder="Search by User Name"/>
+                      <label class="searchLevel" for="floatingInput">Search by User Name</label>
                     </div>
-
-
+                    <div class="col-md-3 mb-2 form-floating">
+                      <input type="text" formControlName="employeeName" class="form-control searchInput"  placeholder="Search by Employee Name"/>
+                      <label class="searchLevel" for="floatingInput">Search by Employee Name</label>
+                    </div>
+                    <div class="col-md-3 mb-2 form-floating">
+                      <select aria-label="Floating label select example" class="searchInput" cSelect id="userRole" formControlName="userRole" name="userRole">
+                        <option value="">Select Role</option>
+                        <option *ngFor="let role of roles" [value]="role.name"> {{role.name}}</option>
+                      </select>
+                      <label class="searchLevel" for="floatingInput">Search by Role</label> 
+                    </div>
+                    <div class="col-md-1 mb-2">
+                      <button type="button" class="btn btn-secondary mr-1 btn-block searchBtn" data-toggle="modal" (click)="search()">
+                        Search
+                      </button>
+                    </div>
                   </div>
               </form>
               </div>
