--- a/src/ui/internal-audit/src/app/views/private/configuration/riskProfile/risk-profile.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/riskProfile/risk-profile.component.html
@@ -6,33 +6,33 @@
             <div class="fa fa-align-justify" >Risk Profile List</div> 
           </div>
           <div class="card-body">
-            <div class="row">
-              <div class="col-sm-7 mb-2">
+            <form [formGroup]="searchForm">
+             <div class="row">
+              <div class="col-sm-6 mb-2">
                   <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
                     <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
-                  </button> 
-  
+                  </button>
               </div>
-              <div class="col-sm-5 mb-2">
-                <div class="row">
+              <div class="offset-sm-2 col-sm-4 mb-2">
+                <div class="row" >                 
                   <div class="col-8">
-                    <!-- <input type="text" [(ngModel)]="searchText" class="form-control pull-right" placeholder="Search by Code"/> -->
-                    <input type="text" class="form-control pull-right" placeholder="Search by Name"/>
+                    <input type="text" formControlName="searchTerm" class="form-control pull-right" placeholder="likelihood level/impact level/risk rating"/>
                   </div>
-                  <div class="col-4">                    
-                    <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" >
+                  <div class="col-4">
+                    <button type="button" class="btn btn-secondary  pull-right btn-block" data-toggle="modal" (click)="search()">
                       Search
                     </button>
-                  </div>                 
+                  </div>
                 </div>
-              </div>
-            </div>
+              </div>              
+             </div>
+            </form>
             <div class="row overflow-auto">
                 <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover datatableStyle" >
                   <thead>
                     <tr>
                       <th>Level of Likelihood</th>
-                      <th>Level of impact</th>
+                      <th>Level of Impact</th>
                       <th>Risk Rating</th>
                       <th>Description</th>
                       <th>Effective From</th>
@@ -82,51 +82,55 @@
     </c-modal-header>
      <c-modal-body>
       <div class="col-md-12" >
-        <input type="hidden" formControlName="id"/>  
-          <div form-floating>
-            <select aria-label="Floating label select example" cSelect id="likelihoodTypeId"
-              formControlName="likelihoodTypeId" name="likelihoodTypeId">
-              <option value=null>Select Likelihood Level</option>
-              <option *ngFor="let commonValueAndType of likelihoodType" [value]="commonValueAndType.id">
-                {{commonValueAndType.text}}
-              </option>
-            </select>
+        <input type="hidden" formControlName="id"/>
+
+          <div style="padding-bottom: 2%;">
+            <div class="form-floating">
+              <select aria-label="Floating label select example" cSelect id="likelihoodTypeId"
+                formControlName="likelihoodTypeId" name="likelihoodTypeId" style="height: 70px;">
+                <option value=null>Select</option>
+                <option *ngFor="let commonValueAndType of likelihoodType" [value]="commonValueAndType.id">
+                  {{commonValueAndType.text}}
+                </option>
+              </select>
+              <label for="likelihoodTypeId" >Likelihood Level</label>
+            </div>
+            <div cRow *ngIf="(riskProfileForm.get('likelihoodTypeId')?.invalid && riskProfileForm.get('likelihoodTypeId')?.errors) &&         
+              (riskProfileForm.get('likelihoodTypeId')?.dirty || riskProfileForm.get('likelihoodTypeId')?.touched)">
+              <small class="text-danger">
+                This field is required.
+              </small>                                 
+            </div> 
+          </div>          
+          <div style="padding-bottom: 2%;">
+            <div class="form-floating">
+              <select aria-label="Floating label select example" cSelect id="impactTypeId"
+                formControlName="impactTypeId" name="impactTypeId" style="height: 70px;">
+                <option value="null">Select</option>
+                <option *ngFor="let commonValueAndType of impactType" [value]="commonValueAndType.id">
+                  {{commonValueAndType.text}}
+                </option>
+              </select>
+              <label for="impactTypeId" >Impact Level</label>
+            </div>
+            <div cRow *ngIf="((riskProfileForm.get('impactTypeId')?.invalid && riskProfileForm.get('impactTypeId')?.errors)) &&
+              (riskProfileForm.get('impactTypeId')?.dirty || riskProfileForm.get('impactTypeId')?.touched)">
+              <small class="text-danger">
+                This field is required.
+              </small>                                 
+            </div> 
           </div>
-
-          <div cRow *ngIf="(riskProfileForm.get('likelihoodTypeId')?.invalid && riskProfileForm.get('likelihoodTypeId')?.errors) &&         
-            (riskProfileForm.get('likelihoodTypeId')?.dirty || riskProfileForm.get('likelihoodTypeId')?.touched)">
-            <small class="text-danger">
-              This field is required.
-            </small>                                 
-          </div> 
-          <br>
-
-          <div form-floating>
-            <select aria-label="Floating label select example" cSelect id="impactTypeId"
-              formControlName="impactTypeId" name="impactTypeId">
-              <option value="null">Select Impact Level</option>
-              <option *ngFor="let commonValueAndType of impactType" [value]="commonValueAndType.id">
-                {{commonValueAndType.text}}
-              </option>
-            </select>
-          </div>
-
-          <div cRow *ngIf="((riskProfileForm.get('impactTypeId')?.invalid && riskProfileForm.get('impactTypeId')?.errors)) &&
-            (riskProfileForm.get('impactTypeId')?.dirty || riskProfileForm.get('impactTypeId')?.touched)">
-            <small class="text-danger">
-              This field is required.
-            </small>                                 
-          </div> 
-          <br>
-
-          <div form-floating>
+          
+          <div style="padding-bottom: 2%;">
+          <div class="form-floating" >
             <select aria-label="Floating label select example" cSelect id="ratingTypeId"
-              formControlName="ratingTypeId" name="ratingTypeId">
-              <option value="null">Select Risk Rating</option>
+              formControlName="ratingTypeId" name="ratingTypeId" style="height: 70px;">
+              <option value="null" >Select</option>
               <option *ngFor="let commonValueAndType of ratingType" [value]="commonValueAndType.id">
                 {{commonValueAndType.text}}
               </option>
             </select>
+            <label for="ratingTypeId" >Risk Rating</label>
           </div>
 
           <div cRow *ngIf="((riskProfileForm.get('ratingTypeId')?.invalid && riskProfileForm.get('ratingTypeId')?.errors)) &&
@@ -135,7 +139,9 @@
               This field is required.
             </small>                                 
           </div> 
-          <br>
+        </div>
+               
+              
 
           <div class="form-floating">
             <textarea class="form-control" placeholder="description" formControlName="description" id="description"></textarea>
