--- a/src/ui/internal-audit/src/app/views/public/components/login/login.component.html
+++ b/src/ui/internal-audit/src/app/views/public/components/login/login.component.html
@@ -56,7 +56,7 @@
                   </small>
 
                 </c-row>
-                <c-row class="mb-3">
+                <c-row class="mb-3 mt-2">
                   <app-recaptcha (tokenEventEmitter)="bindToken($event)"></app-recaptcha>
                 </c-row>
                 <c-row>
