--- a/src/ui/internal-audit/src/app/views/private/security/change-password/change-password.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/change-password/change-password.component.html
@@ -60,7 +60,7 @@
                 </div>
           </div>
         </form>
-      <button cButton color="light" (click)="submit()">Change Password</button>
+      <button cButton color="primary" (click)="submit()">Change Password</button>
     </c-card-body>
   </c-card>
 </div>
