btn search color removed

--- a/src/ui/internal-audit/src/scss/_custom.scss
+++ b/src/ui/internal-audit/src/scss/_custom.scss
@@ -38,8 +38,8 @@
    height: 75% !important;
 }
 .searchBtn{
-   background: skyblue;
-   color: white;
+ //  background: skyblue;
+  // color: white;
 }
 .btnCancelColor{
     background-color: #666666b6;
