--- a/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
@@ -17,26 +17,24 @@
                 <i class="fa fa-align-justify" ></i> Role List
               </div>
               <div class="card-body">
-                <div class="row">
-                  <div class="col-sm-7 mb-2">
+                <form [formGroup]="searchForm">
+                  <div class="row" style="margin: 0 auto;">
+                    <div class="col-md-6 mb-2">
                       <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
                         <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
+                      </button> 
+                    </div>
+                    <div class="col-md-5 mb-2 form-floating">
+                      <input type="text" formControlName="searchTerm" class="form-control searchInput"  placeholder="Search by Name or Description"/>
+                      <label class="searchLevel" for="floatingInput">Role Name / Description</label>
+                    </div>
+                    <div class="col-md-1 mb-2">
+                      <button type="button" class="btn btn-secondary mr-1 btn-block searchBtn" data-toggle="modal" (click)="search()" >
+                        Search
                       </button>
-                  </div>
-                  <div class="col-sm-5 mb-2">
-                    <div class="row">
-                      <div class="col-8">
-                        <input type="text" class="form-control pull-right" placeholder="Search by Name"/>
-                      </div>
-                      <div class="col-4">
-                        <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" >
-                          Search
-                      </button>
-                      </div>
-                      
                     </div>
                   </div>
-                </div>
+               </form>
                 <div class="row overflow-auto">
                     <table datatable [dtOptions]="dtOptions[1]" id="DataTables_Table_1"  class="table table-bordered row-border hover datatableStyle" >
                       <thead>
