Questionnaire backend complete

--- a/src/ui/internal-audit/src/app/views/private/security/designation/designation.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/designation/designation.component.html
@@ -52,7 +52,7 @@
                     <tr>
                       <th>Designation</th>
                       <th>Description</th>   
-                      <th class="col-2 text-center">Action</th>                      
+                      <th class="col-2 text-center">Actions</th>                      
                     </tr>
                   </thead>
                   <tbody *ngIf="designations?.length != 0">
