--- a/src/ui/internal-audit/src/app/views/private/configuration/riskProfile/risk-profile.component.html
+++ b/src/ui/internal-audit/src/app/views/private/configuration/riskProfile/risk-profile.component.html
@@ -3,7 +3,7 @@
       <div class="col-lg-12">
         <div class="card">
           <div class="card-header">
-            <div class="fa fa-align-justify" >Risk Profile List</div> 
+            <div class="fa fa-align-justify"><strong>Risk Profile List</strong></div> 
           </div>
           <div class="card-body">
             
@@ -35,7 +35,7 @@
                       <th>Description</th>
                       <th>Effective From</th>
                       <th>Effective To</th>  
-                      <th class="col-1 text-center">Action</th>                   
+                      <th class="col-1 text-center">Actions</th>                   
                     </tr>
                   </thead>
                   <tbody *ngIf="riskProfiles?.length != 0">
