--- a/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
@@ -11,7 +11,11 @@
               <div class="col-lg-12">
                 <form [formGroup]="userListForm">
                   <div class="row" style="margin: 0 auto;">
-                    <div class="col-md-2"></div>
+                    <div class="col-md-2 mb-2">
+                      <button  class="btnCreateColor" (click)="createNewUser()" cButton>
+                        <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
+                      </button> 
+                    </div>
                     <div class="col-md-3 mb-2 form-floating">
                       <input type="text" formControlName="userName" class="form-control searchInput"  placeholder="Search by User Name"/>
                       <label class="searchLevel" for="floatingInput">Search by User Name</label>
