--- a/src/ui/internal-audit/src/app/views/private/branch-audit/audit-frequency/audit-frequency.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/audit-frequency/audit-frequency.component.html
@@ -15,8 +15,8 @@
                   </button> 
                 </div>
                 <div class="col-md-5 mb-2 form-floating">
-                  <input type="text" formControlName="searchTerm" class="form-control searchInput"  placeholder="search by Audit Frequency/Rating"/>
-                  <label class="searchLevel" for="floatingInput"> Search by  Audit Frequency/Rating</label>
+                  <input type="text" formControlName="searchTerm" class="form-control searchInput"  placeholder="search by Score/Audit Frequency/Rating"/>
+                  <label class="searchLevel" for="floatingInput"> Search by Score/Audit Frequency/Rating</label>
                 </div>
                 <div class="col-md-1 mb-2">
                   <button type="button" class="btn btn-secondary mr-1 btn-block " data-toggle="modal" (click)="search()" >
