--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-criteria/risk-criteria.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-criteria/risk-criteria.component.html
@@ -1,42 +1,30 @@
 <div class="animated fadeIn">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="card">
-          <div class="card-header">
-            <div class="fa fa-align-justify" >Risk Criteria List</div> 
-          </div>
-          <div class="card-body">
-              <div class="row">
-                <div class="col-sm-7 mb-2">
-                  <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton >
-                    <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
-                  </button>
-                </div>
-              <div class="col-sm-5 mb-2">
-                <div class="row">
-                  <div class="col-8">
-                    <!-- <input type="text" [(ngModel)]="searchText" class="form-control pull-right" placeholder="Search by Code"/> -->
-                    <input type="text" class="form-control pull-right" placeholder="Search by Name"/>
-                  </div>
-                  <div class="col-2">
-                    <!-- <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" (click)="search()" >
-                        <i class="fa fa-search" aria-hidden="true"></i>
-                    </button> -->
-                    <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" >
-                      Search
-                  </button>
-                  </div>
-                  <div class="col-2">
-                    <!-- <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal" (click)="clearSearch()" >
-                        <i [ngClass]="searchText ? 'fa fa-times' : 'fa fa-refresh'" aria-hidden="true"></i>
-                    </button> -->
-                    <button type="button" class="btn btn-secondary mr-1 pull-right btn-block" data-toggle="modal"  >
-                      Reset
-                  </button>
-                  </div>
-                </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="card">
+        <div class="card-header">
+          <div class="fa fa-align-justify" >Risk Criteria List</div> 
+        </div>
+        <div class="card-body">
+          
+          <form [formGroup]="searchForm">
+            <div class="row" style="margin: 0 auto;">
+              <div class="col-md-6 mb-2">
+                <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor" (click)="reset()" cButton>
+                  <svg cIcon name="cilPlus" size="md" title="Add Button Icon"></svg> Create
+                </button> 
+              </div>
+              <div class="col-md-5 mb-2 form-floating">
+                <input type="text" formControlName="searchTerm" class="form-control searchInput"  placeholder="search by Country/Risk Criteria/Rating"/>
+                <label class="searchLevel" for="floatingInput"> Search by  Country/Risk Criteria/Rating</label>
+              </div>
+              <div class="col-md-1 mb-2">
+                <button type="button" class="btn btn-secondary mr-1 btn-block " data-toggle="modal" (click)="search()" >
+                  Search
+                </button>
               </div>
             </div>
+         </form>
             <div class="row overflow-auto">
                 <!-- <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" >        -->
                   <table datatable [dtOptions]="dtOptions[0]" id="DataTables_Table_1"  class="table table-bordered row-border hover datatableStyle" >    
@@ -212,32 +200,32 @@
               <label for="floatingTextarea">Description</label>
             </div>
             <br>
-                    
-
-            <div class="form-floating mb-3">
+            <div class="form-floating">
               <input class="form-control" placeholder="effectiveFrom" formControlName="effectiveFrom" id="effectiveFrom" type="date" >
               <label for="effectiveFrom">Effective From</label>
-            
-              <div cRow *ngIf="riskCriteriaForm.get('effectiveFrom')?.invalid && riskCriteriaForm.get('effectiveFrom')?.errors &&
-                    (riskCriteriaForm.get('effectiveFrom')?.dirty || riskCriteriaForm.get('effectiveFrom')?.touched)">
-                <small class="text-danger" *ngIf="riskCriteriaForm.get('effectiveFrom').hasError('required')">
-                  This field is required.
-                </small>                                 
-              </div>
             </div>
-            
-  
-            <div class="form-floating mb-3">
+            <div cRow *ngIf="riskCriteriaForm.get('effectiveFrom')?.invalid && riskCriteriaForm.get('effectiveFrom')?.errors &&
+                  (riskCriteriaForm.get('effectiveFrom')?.dirty || riskCriteriaForm.get('effectiveFrom')?.touched)">
+              <small class="text-danger" *ngIf="riskCriteriaForm.get('effectiveFrom').hasError('required')">
+                This field is required.
+              </small>                                 
+            </div>
+            <br>
+
+            <div class="form-floating">
               <input class="form-control" placeholder="effectiveTo" formControlName="effectiveTo" id="effectiveTo" type="date" >
               <label for="effectiveTo">Effective To</label>
-            
-              <div cRow *ngIf="riskCriteriaForm.get('effectiveTo')?.invalid && riskCriteriaForm.get('effectiveTo')?.errors &&
-                    (riskCriteriaForm.get('effectiveTo')?.dirty || riskCriteriaForm.get('effectiveTo')?.touched)">
-                <small class="text-danger" *ngIf="riskCriteriaForm.get('effectiveTo').hasError('required')">
-                  This field is required.
-                </small>                                 
-              </div>
             </div>
+            <div cRow *ngIf="riskCriteriaForm.get('effectiveTo')?.invalid && riskCriteriaForm.get('effectiveTo')?.errors &&
+                  (riskCriteriaForm.get('effectiveTo')?.dirty || riskCriteriaForm.get('effectiveTo')?.touched)">
+              <small class="text-danger" *ngIf="riskCriteriaForm.get('effectiveTo').hasError('required')">
+                This field is required.
+              </small>                                                      
+            </div>
+            <small class="text-danger" *ngIf="riskCriteriaForm.hasError('invalidDateRange')">
+              Effective from should be greater than effective to.
+            </small>          
+            <br>          
     
         </div>
       </c-modal-body> 
